WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93272
[Qt] WebProcess hangs on plugin initialization
https://bugs.webkit.org/show_bug.cgi?id=93272
Summary
[Qt] WebProcess hangs on plugin initialization
Allan Sandfeld Jensen
Reported
2012-08-06 08:21:39 PDT
Seemingly random after a few page reloads the minibrowser will freeze will loading a page and the webprocess will be unresponsive. Investigation reveals it blocks in PluginProcessConnectionManager::getPluginProcessConnection(), due to a synchronous call to UIProcess.
Attachments
Patch
(2.01 KB, patch)
2012-08-06 08:25 PDT
,
Allan Sandfeld Jensen
no flags
Details
Formatted Diff
Diff
Patch
(2.65 KB, patch)
2012-08-08 02:26 PDT
,
Allan Sandfeld Jensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Allan Sandfeld Jensen
Comment 1
2012-08-06 08:25:34 PDT
Created
attachment 156698
[details]
Patch
Balazs Kelemen
Comment 2
2012-08-06 08:57:01 PDT
***
Bug 84436
has been marked as a duplicate of this bug. ***
Allan Sandfeld Jensen
Comment 3
2012-08-06 10:32:34 PDT
Comment on
attachment 156698
[details]
Patch This is not enough. I can still trigger hangs by manually killing the pluginprocess and reloading the page.
Allan Sandfeld Jensen
Comment 4
2012-08-08 02:26:01 PDT
Created
attachment 157162
[details]
Patch
WebKit Review Bot
Comment 5
2012-08-08 05:42:24 PDT
Comment on
attachment 157162
[details]
Patch Clearing flags on attachment: 157162 Committed
r125024
: <
http://trac.webkit.org/changeset/125024
>
WebKit Review Bot
Comment 6
2012-08-08 05:42:28 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug