[Qt] WebProcess hangs on plugin initialization. https://bugs.webkit.org/show_bug.cgi?id=93272

Reviewed by Kenneth Rohde Christiansen.

* UIProcess/Plugins/PluginProcessProxy.cpp:
(WebKit::PluginProcessProxy::didFinishLaunching): Ensure PluginProcessConnectionManager is informed of plugin crashes.
* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::WebPage): Let setIsInWindow set canStartMedia asynchronously.


Canonical link: https://commits.webkit.org/111332@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125024 268f45cc-cd09-0410-ab3c-d52691b4dbfc